[package]
name = "qwlt"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { git = "https://github.com/ryanisaacg/quicksilver.git" }

[dependencies.wlambda]
git = "https://github.com/WeirdConstructor/WLambda.git"
default-features = false
features = ["mint"]
