[package]
name = "inventory"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { git = "https://github.com/ryanisaacg/quicksilver.git" }
qwlt = { path = "../../" }
fxhash = "0.2.1"
log = "0.4.8"
mint = "0.5.4"

[dependencies.wlambda]
# git = "https://github.com/WeirdConstructor/WLambda.git"
path = "../../../WLambda"
default-features = false
features = ["mint"]
